tests/ui/fail/nightly/stmt_expr.stderr
error: Missing `#[with]` annotation on the enscoping function
  --> $DIR/stmt_expr.rs:12:13
   |
12 |     let _ = #[with] expr();
   |             ^^^^^^^

error: Missing `#[with]` annotation on the enscoping function
 --> $DIR/stmt_expr.rs:6:5
  |
6 |     #[with]
  |     ^^^^^^^
